--- a/doc_notes.org
+++ b/doc_notes.org
@@ -4,13 +4,13 @@
 + inside my comfort place and my confinement, i am able to access the whole world from my web terminal
 + following the wake of my interest in visual arts, i was presented to a group of people that introduced me to nfts
 + we would have daily gatherings in discord, where each would come and go along the day, a sort of meeting point in virtual space
-  - this was by all means like a real-world comunal space, where we all could meet and share and smoke a joint together, except _we didn't ever have to step outside our rooms_
-  - _confinement became social_. i found a group that shared my values, taste and references and introduced me to more references that would accelerate the growth in my art
+  - this was by all means like a real-world comunal space, where we all could meet and share and smoke a joint together, except *we didn't ever have to step outside our rooms*
+  - *confinement became social*. i found a group that shared my values, taste and references and introduced me to more references that would accelerate the growth in my art
 + i was the latest addition to the group and was well recieved by everyone
-  - _i found support in a group of voices that sometimes would have a video form, in a small window inside discord_
+  - *i found support in a group of voices that sometimes would have a video form, in a small window inside discord*
   - i learned how these people would relate to art and the art world, learning how things were for people that had way more experience than me
   - somehow, i never felt the difference in experience was an impediment to our bonding. these voices liked what i did and i liked what they did
 
 + all of this made sense to me. i was raised in the internet but i was always too shy and reserved to connect with people. and now, for the first time, i had a virtual group of real friends, not just company
-  - _my passion for technology and the internet met my social needs_
+  - *my passion for technology and the internet met my social needs*
   - this was a confortable social space, a thing which i had so much trouble with was now easier than ever
